plucking group heading corrected, layout overflow in MndDeploy and Fuel report component fixed

--- a/src/app/fuel-report/fuel-report.component.css
+++ b/src/app/fuel-report/fuel-report.component.css
@@ -12,10 +12,19 @@ h3 {
 
 .example-container {
   padding: 5px 10px;
+  box-sizing: border-box;
   overflow: auto;
-  height: 80vh;
-  width: 95%;
+  height: 85vh;
+  width: 90%;
   margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.mat-table {
+  width: 90%;
 }
 
 .control-wrap {
